2021-12-26  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/argp.pk (argp_parse): Remove dots after non-sentences in
	the default help summaries.

2021-12-26  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/asn1-ber.pk (BER_Data_Value): Use the ?! operator in the
	is_indefinite method.

2021-12-26  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm.h (pvm_make_signed_integral): New prototype.
	(pvm_make_unsigned_integral): Likewise.
	* libpoke/pvm-val.c (pvm_make_signed_integral): New function.
	(pvm_make_unsigned_integral): Likewise.

2021-12-26  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-insn.def: Define PKL_INSN_SSETI.
	* libpoke/pvm.jitter (sseti): New instruction.

2021-12-26  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-asm.pks (ssetc): Renamed from sseti.
	* libpoke/pkl-asm.c (pkl_asm_insn_ssetc): Likewise.
	(pkl_asm_insn): Likewise.
	* libpoke/pkl-insn.def: Likewise.
	* libpoke/pkl-gen.c (pkl_gen_pr_ass_stmt): Likewise.

2021-12-26  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ops.def: Entry for PKL_AST_OP_EXCOND.
	* libpoke/pkl-lex.l: Recognize `?!' as EXCOND.
	* libpoke/pkl-tab.y (EXCOND): New token.
	(expression): Add rule for EXCOND.
	* libpoke/pkl-typify.c (pkl_phase_typify1): Install handler.
	(pkl_typify1_ps_op_excond): New handler.
	* libpoke/pkl-gen.c (pkl_gen_pr_op_excond): New handler.
	(pkl_phase_gen): Install handler.
	* testsuite/poke.pkl/excond-diag-1.pk: New test.
	* testsuite/poke.pkl/excond-1.pk: Likewise.
	* testsuite/poke.pkl/excond-2.pk: Likewise.
	* testsuite/poke.pkl/excond-3.pk: Likewise.
	* testsuite/poke.pkl/excond-4.pk: Likewise.
	* testsuite/poke.pkl/excond-5.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
	* etc/poke.rec (Exception predicate operator !?): Remove as done.
	* doc/poke.texi (exception-predicate): New section.

2021-12-24  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm.jitter: Fix docstring for the instruction `pushe'.

2021-12-24  Jose E. Marchesi  <jemarch@gnu.org>
